--- a/style.css
+++ b/style.css
@@ -1,139 +1,200 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
-
-:root {
-    --backgrond: #17212b;
-    --card-bg: #242f3d;
-    --accent-color: #7177f8;
+*,*:before,*:after {
+    box-sizing: border-box
 }
 
+:where(ul,ol):where([class]) {
+    padding-left: 0
+}
 
+body,:where(blockquote,figure):where([class]) {
+    margin: 0
+}
 
+:where(h1,h2,h3,h4,h5,h6,p,ul,ol,dl):where([class]) {
+    margin-block:0}
+
+:where(dd[class]) {
+    margin-left: 0
+}
+
+:where(fieldset[class]) {
+    margin-left: 0;
+    padding: 0;
+    border: none
+}
+
+:where(ul[class]) {
+    list-style: none
+}
+
+p {
+    --paragraphMarginBottom: 24px;
+    margin-block:0}
+
+p:where(:not([class]):not(:last-child)) {
+    margin-bottom: var(--paragraphMarginBottom)
+}
+
+img {
+    display: block;
+    max-width: 100%
+}
+
+input,textarea,select,button {
+    font: inherit
+}
+
+html {
+    height: 100%;
+    scroll-behavior: smooth
+}
 
 body {
-    font-family: "Comfortaa", sans-serif;
-    background-color: var(--backgrond);
-    color: white;
+    min-height: 100%;
+    line-height: 1.5;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    gap: 20px;
-    padding-top: 40px;
 }
 
+svg *[fill] {
+    fill: currentColor;
+}
 
-.quote {
-    width: 700px;
-    padding: 20px;
+svg *[stroke] {
+    stroke: currentColor;
+}
+
+svg * {
+    transition-property: fill,stroke
+}
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: .01ms!important;
+        animation-iteration-count: 1!important;
+        transition-duration: .01ms!important;
+        scroll-behavior: auto!important
+    }
+}
+
+.app-todo {
+    --size-checkbox: 18px;
+    background-color: #f7f7f7;
     border-radius: 20px;
-    border: 3px solid black;
-    background-color: var(--card-bg);
+    padding: 30px;
+    width: 600px
 }
 
-.quote-author {
-    color: gray;
-    text-decoration: underline;
+.app-todo__heading {
+    text-align: center;
+    font-size: 30px;
+    margin-bottom: 30px
 }
 
-.quote-text {
-    font-size: 25px;
+.app-todo__input-field {
+    margin-bottom: 20px
 }
-.wrap-button{
-    height: 61px;
+
+.app-todo__task {
+    background-color: #d8d8d8;
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    padding: 10px
 }
-.button {
-    color: white;
-    padding: 20px 40px;
-    background-color: var(--accent-color);
-    border-radius: 20px;
-    font-size: 18px;
+
+.app-todo__task--invisible {
+    animation: invisible .3s 1 forwards
+}
+
+@keyframes invisible {
+    to {
+        opacity: 0
+    }
+}
+
+.app-todo__task-icon {
+    width: 20px;
+    cursor: pointer
+}
+
+.app-todo__task-icon img {
+    width: 100%
+}
+
+.app-todo__text {
+    flex: 1;
+    font-size: 20px
+}
+
+.app-todo__input {
+    padding-left: 10px;
+    border-radius: 5px;
+    outline: none;
+    width: 100%
+}
+
+.app-todo__checkbox {
+    cursor: pointer;
+    width: var(--size-checkbox);
+    height: var(--size-checkbox)
+}
+
+.input-field {
+    display: flex;
+    --border-radius: 10px;
+    --size-button: 50px
+}
+
+.input-field__input {
+    padding-left: 20px;
+    font-size: 20px;
+    width: 100%;
+    border: 1px solid grey;
+    border-radius: var(--border-radius) 0 0 var(--border-radius)
+}
+
+.input-field__input:focus {
+    outline: none;
+    border: 2px solid rgb(96,96,96)
+}
+
+.input-field__button {
     cursor: pointer;
     border: none;
-    /* border: 3px solid rgb(61, 195, 68); */
-}
-
-.loader {
-    transform: rotateZ(45deg);
-    perspective: 1000px;
-    border-radius: 50%;
-    width: 48px;
-    height: 48px;
+    outline: none;
+    border-radius: 0 var(--border-radius) var(--border-radius) 0;
+    background-color: #00f;
     color: #fff;
-    display: none;
+    font-weight: 700;
+    font-size: 20px;
+    width: var(--size-button);
+    height: var(--size-button)
 }
 
-.loader:before,
-.loader:after {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: inherit;
-    height: inherit;
-    border-radius: 50%;
-    transform: rotateX(70deg);
-    animation: 1s spin linear infinite;
+.input-field__button:hover {
+    opacity: .7
 }
 
-.loader:after {
-    color: #FF3D00;
-    transform: rotateY(70deg);
-    animation-delay: .4s;
+:root {
+    font-family: Inter,system-ui,Avenir,Helvetica,Arial,sans-serif;
+    line-height: 1.5;
+    font-weight: 400
 }
 
-@keyframes rotate {
-    0% {
-        transform: translate(-50%, -50%) rotateZ(0deg);
-    }
-
-    100% {
-        transform: translate(-50%, -50%) rotateZ(360deg);
-    }
+body {
+    margin: 0;
+    min-width: 320px;
+    min-height: 100vh
 }
 
-@keyframes rotateccw {
-    0% {
-        transform: translate(-50%, -50%) rotate(0deg);
-    }
-
-    100% {
-        transform: translate(-50%, -50%) rotate(-360deg);
-    }
-}
-
-@keyframes spin {
-
-    0%,
-    100% {
-        box-shadow: .2em 0px 0 0px currentcolor;
-    }
-
-    12% {
-        box-shadow: .2em .2em 0 0 currentcolor;
-    }
-
-    25% {
-        box-shadow: 0 .2em 0 0px currentcolor;
-    }
-
-    37% {
-        box-shadow: -.2em .2em 0 0 currentcolor;
-    }
-
-    50% {
-        box-shadow: -.2em 0 0 0 currentcolor;
-    }
-
-    62% {
-        box-shadow: -.2em -.2em 0 0 currentcolor;
-    }
-
-    75% {
-        box-shadow: 0px -.2em 0 0 currentcolor;
-    }
-
-    87% {
-        box-shadow: .2em -.2em 0 0 currentcolor;
-    }
+#root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh
 }
